build/log/idf_py_stderr_output_69205
/home/lakshaya/esp/hello_world/main/hello_world_main.c: In function 'init_adc_continuous':
/home/lakshaya/esp/hello_world/main/hello_world_main.c:42:5: error: expected ',' or ';' before 'adc_cont_config'
   42 |     adc_cont_config.adc_pattern = adc_pattern_1;
      |     ^~~~~~~~~~~~~~~
/home/lakshaya/esp/hello_world/main/hello_world_main.c:35:31: warning: unused variable 'adc_pattern_1' [-Wunused-variable]
   35 |     adc_digi_pattern_config_t adc_pattern_1 = {
      |                               ^~~~~~~~~~~~~
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:76: esp-idf/main/CMakeFiles/__idf_main.dir/hello_world_main.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:5650: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
